--- a/HotelManagement/HotelManagement/Views/ServicesView.xaml
+++ b/HotelManagement/HotelManagement/Views/ServicesView.xaml
@@ -128,14 +128,14 @@
                 <Grid Grid.Row="2" Background="{StaticResource PrimaryLightBrush}">
                     <DataGrid
                  x:Name="dataGridServices" Margin="35"
-                 ItemsSource="{Binding ItemSourceServices, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 ItemsSource="{Binding Services, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  SelectedItem="{Binding SelectedService, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  CanUserResizeColumns="False" IsReadOnly="False"
                  CanUserAddRows="False" AutoGenerateColumns="False"
                  BorderThickness="1" BorderBrush="{StaticResource PrimaryDarkBrush}">
                         <DataGrid.Columns>
                             <materialDesign:DataGridTextColumn
-                            Header="Id" Binding="{Binding id}" 
+                            Header="Id" Binding="{Binding ID}" 
                             IsReadOnly="True">
                                 <DataGridTextColumn.HeaderStyle>
                                     <Style TargetType="{x:Type DataGridColumnHeader}"
@@ -154,7 +154,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </materialDesign:DataGridTextColumn>
                             <materialDesign:DataGridTextColumn
-                            Header="Name" Binding="{Binding name}" IsReadOnly="True"
+                            Header="Name" Binding="{Binding Name}" IsReadOnly="True"
                             >
                                 <DataGridTextColumn.HeaderStyle>
                                     <Style TargetType="{x:Type DataGridColumnHeader}"
@@ -173,7 +173,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </materialDesign:DataGridTextColumn>
                             <materialDesign:DataGridTextColumn
-                            Header="Price" Binding="{Binding price}" IsReadOnly="True"
+                            Header="Price" Binding="{Binding Price}" IsReadOnly="True"
                             >
                                 <DataGridTextColumn.HeaderStyle>
                                     <Style TargetType="{x:Type DataGridColumnHeader}"
@@ -191,17 +191,6 @@
                                     </Style>
                                 </DataGridTextColumn.ElementStyle>
                             </materialDesign:DataGridTextColumn>
-                            <DataGridTemplateColumn >
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <Button Width="40" Padding="0" Background="#637BCF"
-                                        Style="{StaticResource MaterialDesignRaisedButton}"
-                                        Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.EditServiceCommand}">
-                                            <materialDesign:PackIcon Kind="Tools"/>
-                                        </Button>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
                             <DataGridTemplateColumn >
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
